--- a/404.html
+++ b/404.html
@@ -13,9 +13,39 @@
   </style>
 </head>
 <body>
-<h1>404</h1>
-<p>Sorry, the page you’re looking for doesn’t exist.</p>
-<a href="index.html">Back to Home</a>
-<script src="main.js"></script>
+<header>
+<div class="header-bar">
+<h1 class="desktop-logo">
+<img alt="WattSun Solar Logo" src="assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
+      WattSun Solar
+    </h1>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png"/>
+<span class="brand-name">WattSun Solar</span>
+</div>
+<button aria-label="Open menu" class="nav-toggle">☰</button>
+</div>
+<nav>
+<a href="index.html">Home</a>
+<a href="solutions.html">Solutions</a>
+<a href="shop.html">Shop</a>
+<a href="financing.html">Financing</a>
+<a href="projects.html">Projects</a>
+<a href="contact.html">Contact</a>
+</nav>
+</header>
+
+<main style="text-align:center; padding: 4rem 2rem;">
+<h1 style="font-size: 3rem; margin-top: 2rem;">404</h1>
+<p style="font-size: 1.3rem; color: #666;">Sorry, the page you’re looking for doesn’t exist.</p>
+<a href="index.html" style="color: #228B22; text-decoration: underline; font-weight: bold;">Back to Home</a>
+</main>
+
+<footer class="mobile-nav">
+<a aria-label="Home" href="index.html">🏠</a>
+<a aria-label="Account" href="account.html">👤</a>
+<a aria-label="Cart" href="cart.html">🛒<span id="cart-count">0</span></a>
+<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">☰</a>
+</footer>
 </body>
 </html>
