--- a/calculators/calculator.html
+++ b/calculators/calculator.html
@@ -8,8 +8,7 @@
   footer.mobile-nav {
     display: none !important;
   }
-}
-</style>
+}</style>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Solar Kit Calculator - WattSun Solar</title>
@@ -124,7 +123,16 @@
 <body>
 <header>
 <div class="header-bar">
-<h1>WattSun Solar</h1>
+<h1 class="desktop-logo">
+<img alt="WattSun Solar Logo" src="../assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
+  WattSun Solar
+</h1>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="../assets/logo/Wattsun Solar log2.png"/>
+<span class="brand-name">WattSun Solar</span>
+</div>
+
+
 <button aria-label="Menu" class="nav-toggle" onclick="toggleNav()">☰</button>
 </div>
 <nav>
