--- a/cart.html
+++ b/cart.html
@@ -420,12 +420,15 @@
 <div class="header-bar">
 <h1 class="desktop-logo">
 <img alt="WattSun Solar Logo" src="assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
-        WattSun Solar
-      </h1>
+  WattSun Solar
+</h1>
 <div class="logo-container">
-<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png"/>
 <span class="brand-name">WattSun Solar</span>
-</img></div>
+</div>
+
+
+
 <button aria-label="Menu" class="nav-toggle" onclick="toggleNav()">☰</button>
 </div>
 <nav id="mainNav">
