--- a/financing.html
+++ b/financing.html
@@ -238,19 +238,22 @@
     }
 
     @media (max-width: 768px) {
-      h1 img.site-logo {
-        width: auto !important;
-        max-height: 32px !important;
-        margin-right: 8px;
-      }
     }
-
 </style>
 </head>
 <body>
 <header>
 <div class="header-bar">
-<h1>WattSun Solar</h1>
+<h1 class="desktop-logo">
+<img alt="WattSun Solar Logo" src="assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
+  WattSun Solar
+</h1>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png"/>
+<span class="brand-name">WattSun Solar</span>
+</div>
+
+
 <button aria-label="Open menu" class="nav-toggle" onclick="toggleNav()">☰</button>
 </div>
 <nav>
