--- a/solutions.html
+++ b/solutions.html
@@ -450,18 +450,85 @@ nav a:focus {
   color: #00a651;
   font-weight: bold;
 }
-    </style>
+    
+            @media (max-width: 768px) {
+            }
+            
+
+/* === Logo Formatting from cart.html === */
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+      }
+      }
+      }
+      }
+      }
+    }
+      }
+      }
+      }
+      }
+      }
+      }
+      }
+      }
+    }
+    }
+      }
+      }
+      }
+      }
+      }
+      }
+      }
+      }
+    }
+    }
+    }
+    }
+    @media (max-width: 768px) {
+      header {
+      }
+    }
+    }
+    @media (max-width: 768px) {
+      }
+      }
+      }
+    }</style>
 </head>
 <body>
 <header>
 <div class="header-bar">
-<h1>WattSun Solar</h1>
+<h1 class="desktop-logo">
+<img alt="WattSun Solar Logo" src="assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
+        WattSun Solar
+      </h1>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png"/>
+<span class="brand-name">WattSun Solar</span>
+</div>
+
 <button aria-label="Open menu" class="nav-toggle">☰</button>
 </div>
 <nav>
 <a href="index.html">Home</a>
 <a href="solutions.html">Solutions</a>
 <a href="shop.html">Shop</a>
+<a href="calculators/calculator.html">Calculator</a>
 <a href="financing.html">Financing</a>
 <a href="projects.html">Projects</a>
 <a href="contact.html">Contact</a>
